# flowcraft

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_EXPERIENCE.md  README.md  agent.md  alembic.ini  docker-compose.yml  nginx.conf  opencode.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
apps/frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: client.ts  ws.ts
apps/frontend/src/components/: Canvas.tsx  ExecutionOverlay.tsx  HumanDecisionDialog.tsx  PropertiesPanel.tsx  Sidebar.tsx  Toolbar.tsx  WorkflowList.tsx
apps/frontend/src/components/nodes/: ExecutorNode.tsx  (+4 more)
apps/frontend/src/stores/: workflowStore.ts
apps/frontend/src/types/: workflow.ts
cli/: pyproject.toml
cli/src/cli/: main.py
examples/: code_review_workflow.json  demo_workflow.json
openspec/: config.yaml
openspec/changes/init-flowcraft-platform/: design.md  proposal.md  tasks.md
schemas/: workflow.schema.json
src/flowcraft/: __init__.py  agents.py  compiler.py  factory.py  main.py  mcp_client.py  sandbox.py  state.py
src/flowcraft/api/: __init__.py  app.py  deps.py  schemas.py  store.py  tasks.py  workflows.py  ws.py
src/flowcraft/db/: __init__.py  database.py  models.py
tests/: test_api_smoke.py  test_engine_v2.py  test_hitl.py  test_integration_all.py  test_integration_full.py
tools/: README.md
tools/code-sandbox/: main.py
tools/http-client/: Dockerfile  main.py
tools/search-server/: Dockerfile  main.py
(+6 files in other folders)
