[project]
name = "flowcraft"
version = "0.1.0"
description = "Open Source Visual Workflow Orchestration Platform for LLM Agent Pipelines"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowcraft"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
