[project]
name = "agent-flow"
version = "0.1.0"
description = "FlowCraft CLI — scaffold, develop, and test workflows"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "click>=8.0",
    "flowcraft",
]

[project.scripts]
agent-flow = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
